[gd_scene load_steps=29 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://PlayerOne.gd" type="Script" id=2]
[ext_resource path="res://img/PicsArt_11-02-05.42.03.png" type="Texture" id=3]
[ext_resource path="res://img/PicsArt_11-02-05.43.00.png" type="Texture" id=4]
[ext_resource path="res://PlayerTwo.gd" type="Script" id=5]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUD.gd" type="Script" id=7]
[ext_resource path="res://fonts/Hellofreeday DEMO.otf" type="DynamicFontData" id=8]
[ext_resource path="res://RightGoal.gd" type="Script" id=9]
[ext_resource path="res://LeftGoal.gd" type="Script" id=10]
[ext_resource path="res://img/PicsArt_11-02-04.51.37.png" type="Texture" id=11]
[ext_resource path="res://SettingNew.gd" type="Script" id=12]
[ext_resource path="res://Goals.gd" type="Script" id=13]

[sub_resource type="CircleShape2D" id=1]
radius = 15.7195

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9.86403, 10.6752 )

[sub_resource type="DynamicFont" id=5]
size = 55
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 90
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 42.3539 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 39.7946 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 149.473 )

[sub_resource type="DynamicFont" id=13]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 80
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 60
font_data = ExtResource( 8 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="P2StartPosition" type="Position2D" parent="."]
position = Vector2( 204.378, 383.158 )

[node name="P1StartPosition" type="Position2D" parent="."]
position = Vector2( 1179.21, 384.33 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 683, 383 )

[node name="PlayerOne" type="RigidBody2D" parent="."]
position = Vector2( 1000, 124.673 )
mode = 3
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 2 )
speed = 700

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOne"]
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerOne"]
position = Vector2( -1.01878, -0.687622 )
scale = Vector2( 0.07, 0.07 )
frames = SubResource( 2 )
animation = "hit"

[node name="PlayerTwo" type="RigidBody2D" parent="."]
position = Vector2( 187.108, 352.928 )
mode = 3
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 5 )
speed = 700

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTwo"]
position = Vector2( 0.435242, 0.366089 )
scale = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerTwo"]
position = Vector2( -0.237793, 0.083252 )
scale = Vector2( 0.07, 0.07 )
frames = SubResource( 3 )
animation = "hit"

[node name="Ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 700, 300 )
collision_layer = 3
collision_mask = 3
mass = 1000.0

[node name="AreaBound" type="KinematicBody2D" parent="."]
scale = Vector2( 0.998059, 2.95195 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBound"]
position = Vector2( 683.419, -9.90279 )
scale = Vector2( 70, 1 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBound"]
position = Vector2( 683.864, 271.178 )
scale = Vector2( 70, 1 )
shape = SubResource( 4 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="LeftScored" type="Label" parent="HUD"]
margin_left = 629.0
margin_top = 39.0
margin_right = 780.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
text = "1"

[node name="RightScored" type="Label" parent="HUD"]
margin_left = 624.0
margin_top = 39.0
margin_right = 737.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
text = "0"
align = 2

[node name="RespawnTimer" type="Label" parent="HUD"]
margin_left = 561.0
margin_top = 229.0
margin_right = 806.0
margin_bottom = 337.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = -1
align = 1
valign = 1

[node name="Winner" type="Label" parent="HUD"]
margin_left = 449.0
margin_top = 282.0
margin_right = 1056.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 1
valign = 1

[node name="RestartButton" type="Button" parent="HUD"]
margin_left = 621.0
margin_top = 447.0
margin_right = 792.0
margin_bottom = 525.0
custom_fonts/font = SubResource( 8 )
text = "Restart"

[node name="RightGoal" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2( 1404.72, 401.184 )
scale = Vector2( 1, 13 )
shape = SubResource( 9 )

[node name="LeftGoal" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2( -39.1817, 377.201 )
scale = Vector2( 1, 13 )
shape = SubResource( 10 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 682.729, 383.379 )
scale = Vector2( 0.712746, 0.710268 )
z_index = -1
frames = SubResource( 11 )
animation = "New Anim"

[node name="Corners" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corners"]
position = Vector2( -10.6851, 77.3005 )
shape = SubResource( 12 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Corners"]
position = Vector2( 1375.59, 75.8144 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Corners"]
position = Vector2( -9.25302, 695.141 )
shape = SubResource( 12 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Corners"]
position = Vector2( 1375.93, 706.248 )
shape = SubResource( 12 )

[node name="SettingScreen" type="CanvasLayer" parent="."]
script = ExtResource( 12 )

[node name="Goals" type="Label" parent="SettingScreen"]
margin_left = 345.0
margin_top = 193.0
margin_right = 775.0
margin_bottom = 285.0
custom_fonts/font = SubResource( 13 )
text = "Goals                      -"
script = ExtResource( 13 )

[node name="MaxGoals" type="LineEdit" parent="SettingScreen/Goals"]
margin_left = 521.0
margin_top = -6.0
margin_right = 663.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 14 )
text = "5"
align = 1

[node name="RespawnTime" type="Label" parent="SettingScreen"]
margin_left = 342.949
margin_top = 303.368
margin_right = 772.949
margin_bottom = 395.368
custom_fonts/font = SubResource( 13 )
text = "RespawnTime  -"

[node name="RespawnTimer" type="LineEdit" parent="SettingScreen/RespawnTime"]
margin_left = 522.477
margin_top = -1.10812
margin_right = 664.477
margin_bottom = 100.892
custom_fonts/font = SubResource( 14 )
text = "3"
align = 1

[node name="SaveAndReturn" type="Button" parent="SettingScreen"]
margin_left = 503.364
margin_top = 506.545
margin_right = 911.364
margin_bottom = 597.545
custom_fonts/font = SubResource( 15 )
text = "Save And Exit"
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="HUD/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="body_entered" from="RightGoal" to="RightGoal" method="_on_RightGoal_body_entered"]
[connection signal="right_goal" from="RightGoal" to="." method="_on_RightGoal"]
[connection signal="body_entered" from="LeftGoal" to="LeftGoal" method="_on_LeftGoal_body_entered"]
[connection signal="left_goal" from="LeftGoal" to="." method="_on_LeftGoal"]
[connection signal="set_goals" from="SettingScreen" to="." method="_on_SettingScreen_set_goals"]
[connection signal="set_goals" from="SettingScreen" to="SettingScreen" method="_on_SettingScreen_set_goals"]
[connection signal="text_changed" from="SettingScreen/Goals/MaxGoals" to="SettingScreen/Goals" method="_on_MaxGoals_text_changed"]
[connection signal="text_changed" from="SettingScreen/Goals/MaxGoals" to="." method="_on_MaxGoals_text_changed"]
[connection signal="text_changed" from="SettingScreen/Goals/MaxGoals" to="SettingScreen" method="_on_MaxGoals_text_changed"]
[connection signal="text_entered" from="SettingScreen/Goals/MaxGoals" to="." method="_on_MaxGoals_text_entered"]
[connection signal="text_changed" from="SettingScreen/RespawnTime/RespawnTimer" to="SettingScreen" method="_on_RespawnTimer_text_changed"]
[connection signal="pressed" from="SettingScreen/SaveAndReturn" to="." method="_on_SaveAndReturn_pressed"]
[connection signal="pressed" from="SettingScreen/SaveAndReturn" to="SettingScreen" method="_on_SaveAndReturn_pressed"]
